--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,8 @@
   ~ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
   -->
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -134,7 +135,7 @@
                     <execution>
                         <phase>generate-sources</phase>
                         <goals>
-                            <goal>setup</goal>
+                            <goal>instrumentInternal</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -299,5 +300,5 @@
             <artifactId>jstl-impl</artifactId>
         </dependency>
     </dependencies>
-    
+
 </project>
