--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,7 @@
                     <execution>
                         <phase>generate-sources</phase>
                         <goals>
-                            <goal>instrumentInternal</goal>
+                            <goal>setup</goal>
                         </goals>
                     </execution>
                 </executions>
