--- a/pom.xml
+++ b/pom.xml
@@ -294,11 +294,22 @@
             <artifactId>jstl-impl</artifactId>
         </dependency>
 
+        <!-- Http client for the OAuth client and user endpoints -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+        </dependency>
+
         <!-- OSIAM Interaction Model -->
         <dependency>
             <groupId>org.osiam</groupId>
             <artifactId>osiam-interaction-model</artifactId>
             <version>0.9-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
         </dependency>
     </dependencies>
 
