--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>org.osiam</groupId>
         <artifactId>osiam-server-parent</artifactId>
-        <version>0.16-SNAPSHOT</version>
+        <version>0.15.3</version>
     </parent>
 
     <artifactId>osiam-auth-server</artifactId>
@@ -282,7 +282,7 @@
         <dependency>
             <groupId>org.osiam</groupId>
             <artifactId>osiam-interaction-model</artifactId>
-            <version>0.16-SNAPSHOT</version>
+            <version>0.15.3</version>
         </dependency>
     </dependencies>
 
