--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <parent>
         <groupId>org.osiam</groupId>
         <artifactId>osiam-server-parent</artifactId>
-        <version>0.15.6-SNAPSHOT</version>
+        <version>0.15.6</version>
     </parent>
 
     <artifactId>osiam-auth-server</artifactId>
