[task] prepared auth server for ldap authentication
- added spring security ldap dependency
- updated login template for login modus switch (normal, ldap)
- added test file for ledap server emulation

--- a/pom.xml
+++ b/pom.xml
@@ -225,6 +225,19 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-taglibs</artifactId>
         </dependency>
+        
+        <!-- LDAP -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-ldap</artifactId>
+            <version>${org.springframework.security-version}</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.directory.server</groupId>
+            <artifactId>apacheds-server-jndi</artifactId>
+            <version>1.5.5</version>
+        </dependency>
 
         <!-- Servlet -->
         <dependency>
@@ -235,6 +248,7 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
+            <version>1.5.6</version>
         </dependency>
 
         <dependency>
