--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,10 @@
     <packaging>war</packaging>
 
     <name>OSIAM Auth Server</name>
+    
+    <properties>
+    	<org.osiam.connector4java.version>0.15-SNAPSHOT</org.osiam.connector4java.version>
+    </properties>
 
     <build>
         <plugins>
@@ -118,6 +122,12 @@
     </build>
 
     <dependencies>
+    	<dependency>
+			<groupId>org.osiam</groupId>
+			<artifactId>connector4java</artifactId>
+			<version>${org.osiam.connector4java.version}</version>
+		</dependency>
+    
         <!-- Groovy SDK LICENSE: Apache 2.0 according to http://grepcode.com/snapshot/repo1.maven.org/maven2/org.codehaus.groovy/groovy-all/2.0.4 -->
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
@@ -301,12 +311,6 @@
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring4</artifactId>
-        </dependency>
-        
-        <dependency>
-            <groupId>org.thymeleaf.extras</groupId>
-            <artifactId>thymeleaf-extras-springsecurity3</artifactId>
-            <version>2.1.1.RELEASE</version>
         </dependency>
 
     </dependencies>
