[task] added startup check for attribute mapping

--- a/defaultConfiguration/osiam.properties
+++ b/defaultConfiguration/osiam.properties
@@ -11,5 +11,10 @@ org.osiam.auth.client.secret=auth-secret
 org.osiam.auth.ldap.enabled=true
 org.osiam.auth.ldap.server.url=ldap://localhost:33389/dc=springframework,dc=org
 org.osiam.auth.ldap.dn.patterns=uid={0},ou=people
-org.osiam.auth.ldap.sync.user.data=true
-org.osiam.auth.ldap.dn.attributes=mail,sn,uid,displayName,givenName
+org.osiam.auth.ldap.sync-user-data=true
+
+org.osiam.auth.ldap.mapping=userName:uid\
+,email:mail\
+,name.familyName:sn\
+,name.givenName:givenName\
+,displayName:displayName\
