[task] added jpa and db configuration

--- a/defaultConfiguration/osiam.properties
+++ b/defaultConfiguration/osiam.properties
@@ -1,3 +1,10 @@
+# Database properties
+db.driver=org.postgresql.Driver
+db.dialect=org.hibernate.dialect.PostgresPlusDialect
+db.url=jdbc:postgresql://localhost:5432/ong
+db.username=ong
+db.password=b4s3dg0d
+
 # resource server configuration
 org.osiam.resource.server.port=8080
 org.osiam.resource.server.host=localhost
@@ -17,4 +24,4 @@ org.osiam.auth.ldap.mapping=userName:uid\
 ,email:mail\
 ,name.familyName:sn\
 ,name.givenName:givenName\
-,displayName:displayName\
+,displayName:displayName
