--- a/src/main/deploy/auth-server.properties
+++ b/src/main/deploy/auth-server.properties
@@ -1,12 +1,12 @@
 # Database properties
-org.osiam.auth-server.db.driver=org.h2.Driver
-org.osiam.auth-server.db.dialect=org.hibernate.dialect.H2Dialect
-org.osiam.auth-server.db.url=jdbc:h2:tcp://localhost/mem:osiam;DB_CLOSE_DELAY=-1
-org.osiam.auth-server.db.username=sa
-org.osiam.auth-server.db.password=sa
+org.osiam.auth-server.db.driver=org.postgresql.Driver
+org.osiam.auth-server.db.dialect=org.hibernate.dialect.PostgresPlusDialect
+org.osiam.auth-server.db.url=jdbc:postgresql://localhost:5432/ong
+org.osiam.auth-server.db.username=ong
+org.osiam.auth-server.db.password=b4s3dg0d
 
 # OSIAM authentication-server configuration
-# Location of itself
+# Home URL (needed for self reference)
 org.osiam.auth-server.home=http://localhost:8080/osiam-auth-server
 
 # OSIAM resource server configuration
