[fix] fixes and cleanup for release 1.0

--- a/src/main/deploy/auth-server.properties
+++ b/src/main/deploy/auth-server.properties
@@ -13,12 +13,4 @@ org.osiam.auth-server.home=http://localhost:8080/osiam-auth-server
 org.osiam.resource-server.home=http://localhost:8080/osiam-resource-server
 
 # LDAP config for auth server
-org.osiam.auth-server.ldap.enabled=true
-org.osiam.auth-server.ldap.server.url=ldap://localhost:33389/dc=springframework,dc=org
-org.osiam.auth-server.ldap.dn.patterns=uid={0},ou=people
-org.osiam.auth-server.ldap.sync-user-data=true
-org.osiam.auth-server.ldap.mapping=userName:uid\
-,email:mail\
-,name.familyName:sn\
-,name.givenName:givenName\
-,displayName:displayName\
+org.osiam.auth-server.ldap.enabled=false
