--- a/src/main/deploy/auth-server.properties
+++ b/src/main/deploy/auth-server.properties
@@ -1,4 +1,5 @@
 # Database properties
+org.osiam.auth-server.db.vendor=postgresql
 org.osiam.auth-server.db.driver=org.postgresql.Driver
 org.osiam.auth-server.db.dialect=org.hibernate.dialect.PostgresPlusDialect
 org.osiam.auth-server.db.url=jdbc:postgresql://localhost:5432/ong
