[build] run cobertura during phase `test`

--- a/pom.xml
+++ b/pom.xml
@@ -559,7 +559,7 @@
                         <executions>
                             <execution>
                                 <id>generate-data</id>
-                                <phase>package</phase>
+                                <phase>test</phase>
 
                                 <goals>
                                     <goal>cobertura</goal>
