--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 
     <groupId>org.osiam</groupId>
     <artifactId>auth-server</artifactId>
-    <version>2.3</version>
+    <version>2.4-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <name>OSIAM Auth Server</name>
@@ -61,7 +61,7 @@
     <scm>
         <connection>scm:https://github.com/osiam/auth-server.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/osiam/auth-server.git</developerConnection>
-        <tag>v2.3</tag>
+        <tag>maintenance-2.x</tag>
     </scm>
 
     <distributionManagement>
