Make JDBC pool properties configurable
Resolves #81

--- a/src/main/deploy/auth-server.properties
+++ b/src/main/deploy/auth-server.properties
@@ -6,6 +6,10 @@ org.osiam.auth-server.db.url=jdbc:postgresql://localhost:5432/ong
 org.osiam.auth-server.db.username=ong
 org.osiam.auth-server.db.password=b4s3dg0d
 
+# JDBC pool properties
+org.osiam.auth-server.db.maximum-pool-size=10
+org.osiam.auth-server.db.connection-timeout-ms=30000
+
 # OSIAM authentication-server configuration
 # Home URL (needed for self reference)
 org.osiam.auth-server.home=http://localhost:8080/osiam-auth-server
