--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,7 @@
   ~ SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
   -->
 
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -34,7 +33,7 @@
 
     <groupId>org.osiam</groupId>
     <artifactId>auth-server</artifactId>
-    <version>2.5-SNAPSHOT</version>
+    <version>2.5</version>
     <packaging>war</packaging>
 
     <name>OSIAM Auth Server</name>
@@ -68,7 +67,7 @@
     <scm>
         <connection>scm:https://github.com/osiam/auth-server.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/osiam/auth-server.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>v2.5</tag>
     </scm>
     <distributionManagement>
         <repository>
@@ -397,7 +396,7 @@
                         <artifactId>cobertura-maven-plugin</artifactId>
                         <version>2.7</version>
                         <configuration>
-                            <check/>
+                            <check />
                             <formats>
                                 <format>xml</format>
                             </formats>
