--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 
     <groupId>org.osiam</groupId>
     <artifactId>auth-server</artifactId>
-    <version>2.5</version>
+    <version>2.6-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <name>OSIAM Auth Server</name>
@@ -67,7 +67,7 @@
     <scm>
         <connection>scm:https://github.com/osiam/auth-server.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/osiam/auth-server.git</developerConnection>
-        <tag>v2.5</tag>
+        <tag>HEAD</tag>
     </scm>
     <distributionManagement>
         <repository>
